--- a/src/OficinaMecanica/API.csproj
+++ b/src/OficinaMecanica/API.csproj
@@ -9,6 +9,7 @@
     <DockerfileContext>.</DockerfileContext>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
+    <AssemblyName>EstoqueService.API</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
