--- a/k8s/estoque-secret.yaml
+++ b/k8s/estoque-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: oficina-mecanica-secret
+  name: estoque-secret
 type: Opaque
 stringData:
   DatabaseConnection__Password: "__DB_MASTER_PASSWORD__"
