--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,8 @@ Thumbs.db
 **/Tests/Report/
 **/generate-test-reports.bat
 **/generate-test-reports.ps1
+# Copilot instructions
+.github/copilot-instructions.md
+
+# Agents instructions
+AGENTS.md
